# MNA

./: .gitignore  CMakeLists.txt  README.md
UI/: ARPSpoofingController.cpp  ARPSpoofingController.h  CaptureControlWidget.cpp  CaptureControlWidget.h  DeviceDiscoveryController.cpp  DeviceDiscoveryController.h  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  DnsLookupWidget.cpp  DnsLookupWidget.h  HexView.cpp  HexView.h  LatencyTestWidget.cpp  LatencyTestWidget.h  MacLookupWidget.cpp  MacLookupWidget.h  MainWindow.cpp  MainWindow.h  NetworkInterfaceDialog.cpp  NetworkInterfaceDialog.h  NetworkInterfaceDialog.md  PacketCaptureController.cpp  PacketCaptureController.h  PacketDisplayController.cpp  PacketDisplayController.h  PacketFilterWidget.cpp  PacketFilterWidget.h  PacketTableView.cpp  PacketTableView.h  PortScanWidget.cpp  PortScanWidget.h  ProtocolTreeView.cpp  ProtocolTreeView.h  README.md  SpeedTestWidget.cpp  SpeedTestWidget.h  TimeSettingsDialog.cpp  TimeSettingsDialog.h  TimeZoneSettings.h  TracerouteWidget.cpp  (+3 more)
UI/Dialogs/: AboutDialog.cpp  AboutDialog.h  SettingsDialog.cpp  SettingsDialog.h
UI/Models/: PacketFilterProxyModel.cpp  PacketFilterProxyModel.h  PacketModel.cpp  PacketModel.h  ProtocolTreeModel.cpp  ProtocolTreeModel.h
UI/Utils/: ApplicationManager.cpp  ApplicationManager.h  DataValidator.cpp  DataValidator.h  ErrorHandler.cpp  ErrorHandler.h  ErrorRecoveryDialog.cpp  ErrorRecoveryDialog.h  LoggingDialog.cpp  LoggingDialog.h  MemoryManager.cpp  MemoryManager.h  NetworkInterfaceManager.cpp  NetworkInterfaceManager.h  PacketInfoGenerator.cpp  PacketInfoGenerator.h  PrivilegeChecker.cpp  PrivilegeChecker.h  README.md  SettingsManager.cpp  SettingsManager.h
UI/Wrappers/: ProtocolAnalysisWrapper.cpp  ProtocolAnalysisWrapper.h  README.md
scripts/: adapter_scan.sh  lan_scan.sh
src/: arpspoof.c
src/dns/: dns.c  dns.h  dns_main.c
src/internetspeed/: speedtest.c  speedtest.h  speedtest_main.c
src/latency/: latency.c  latency.h  latency_main.c
src/mac/: mac.c  mac.h  mac_main.c
src/packetcapture/: Makefile  arp.c  arp.h  device_scanner.c  device_scanner.h  main.c  protocol.c  protocol.h
src/packetscapture/: arpspoof.c
src/portscan/: portscan.c  portscan.h  portscan_main.c
src/protocol/ethernet/: ethernet.c  ethernet.h
src/protocol/ip/: ip.c  ip.h
src/protocols/arp/: arp.c  arp.h
src/protocols/dhcp/: dhcp.c  dhcp.h
src/protocols/dns/: dns.c  dns.h
src/protocols/ftp/: ftp.c  ftp.h
src/protocols/http/: http.c  http.h
src/protocols/https/: https.c  https.h
src/protocols/imap/: imap.c  imap.h  test.c
src/protocols/ipv4/: ipv4.c  ipv4.h
src/protocols/ipv6/: ipv6.c  ipv6.h
src/protocols/quic/: quic.c  quic.h
src/protocols/smtp/: smtp.c  smtp.h
src/protocols/snmp/: snmp.c  snmp.h
src/protocols/ssh/: ssh.c  ssh.h
src/protocols/tcp/: tcp.c  tcp.h
src/protocols/udp/: udp.c  udp.h
src/traceroute/: traceroute.c  traceroute.h  traceroute_main.c
